hlvm/test/invalid/blockresult.hlx
<?xml version="1.0" encoding="UTF-8"?>
<hlvm xmlns="http://hlvm.org/src/hlvm/Reader/XML/HLVM.rng" pubid="http://hlvm.org/src/hlvm/test/xml2xml/loop.hlx">
  <bundle id="loop">
    <constant id="0" type="s32">
      <dec>0</dec>
    </constant>
    <constant id="1" type="s32">
      <dec>1</dec>
    </constant>
    <program id="loop">
      <block>
        <result>
          <select>
            <ne>
              <ref id="1"/>
              <ref id="0"/>
            </ne>
            <block><ref id="0"/></block>
            <block><ref id="1"/></block>
          </select>
        </result>
        <ret/>
      </block>
    </program>
  </bundle>
</hlvm>
